# lfi-verifier

./: .gitignore  README.md  meson.build  meson_options.txt
frama-c/: run-wp.sh  stubs.c
src/: args.h  main.c
src/arm64/: base.instrs  verify.c
src/decode/disarm/: meson.build
src/decode/fadec/: meson.build
src/include/: lfiv.h
src/riscv64/: verify.c
src/x64/: base.instrs  bdd.c  bddinc.S  bddinc.s  macroinst.c  verify.c  x86-all.bdd.c  x86-all.bdd.h
subprojects/: argp.wrap  disarm.wrap  fadec.wrap
subprojects/packagefiles/disarm/: meson.build
subprojects/packagefiles/fadec/: meson.build
test/: meson.build  runtest.go
test/arm64/: fail.s  pass.s
test/x64/: fail.s  pass.s
tools/lfi-verify/: argtable3.c  argtable3.h  elfdefinitions.h  main.c
