option('arch',
  type: 'string',
  value: 'arm64,x64',
  description: 'list of architectures for which to enable verification')

option('code_bdd',
  type: 'boolean',
  value: false,
  description: 'embed the x64 BDD as code rather than data (faster performance, longer build time)')

option('ctxreg_tp_offset',
  type: 'integer',
  value: 16,
  description: 'offset for context register TP memory accesses')
